updated with tabkle heading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <!-- table inside card -->
                         <div class="table-responsive-md">
                             <table class="table table-sm table-hover text-center">
-                                <thead id="table-header" class="text-white">
+                                <thead id="table-header">
                                     <tr>
                                         <th scope="col">Train Name</th>
                                         <th scope="col">Destination</th>
